M210 - added more details

--- a/M210 - Public Cloud - index.html
+++ b/M210 - Public Cloud - index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
 </head>
 <body>
 <h1>M210 - Public Cloud für Anwendungen nutzen</h1>
@@ -72,6 +73,9 @@
     Diese Funktionen machen die Public Cloud zu einer attraktiven Option für Unternehmen aller Größen, die ihre IT-Infrastruktur modernisieren und von den Vorteilen der Cloud-Technologie profitieren möchten.
 </p>
 
+
+
+
 <h2>
     Begriffe
 </h2>
@@ -90,6 +94,110 @@
     </li>
     <li>
         <b>CI/CD Pipeline</b>: auch Continuous Integration/Continuous Deployment-Pipeline genannt, ist eine Reihe von Automatisierungsschritten, die die Bereitstellung von Anwendungen vereinfachen und beschleunigen.
+    </li>
+</ul>
+
+<h3>
+    was versteht man unter Cloud
+</h3>
+<p>
+
+</p>
+
+<h3>
+    Wieso heisst eine Cloud eigentlich Cloud
+</h3>
+<p>
+    eine Wolke (Cloud) besteht aus vielen Regentropfen. aber nur als Wolke sind sie sichtbar. Clouds im Internet wurden immer als solche Wolken gesehen.
+</p>
+
+<h3>wie wird eine Cloud definiert</h3>
+<ol>
+    <li>
+        nicht physisch vorhanden bei mir
+    </li>
+    <li>
+        nicht einzeln vorhanden
+    </li>
+    <li>
+        verbund von gemeinsamen Ressourcen/Computerressourcen
+    </li>
+</ol>
+
+
+
+<h3>
+    Merkmale des Cloud-Computing mit Zugriff via NIST
+</h3>
+<ul>
+    <li>
+        <b>on demand self service</b>: Nutzung auf Abruf, bekomme als Kunde immer sofort Zugriff
+    </li>
+    <li>
+        <b>broad network access</b>:über Netzwerk (Internet) und Clients auf die Dienste zugreifen.
+    </li>
+    <li>
+        <b>ressource pooling</b>: Zusammenlegung von Ressourcen, Serverkapazitäten werden gebündelt und als einheitliche CLoud zur Verfügung gestellt. -> Economics of scale
+    </li>
+    <li>
+        <b>rapide elasticity</b>: Zur Verfügung stehende Ressourcen werden angepasst und es entsteht der Eindruck eines unbegrenzten Speicherplatzes.
+    </li>
+    <li>
+        <b>measured service</b>: Überwachung des Dienstes, die einzelnen Cloud-Server werden immer wieder überwacht und optimiert. -> nur was genutzt wird, kostet auch
+    </li>
+</ul>
+
+<h3>
+    Vorteile von Cloud-lösungen gegenüber on Premise-lösungen
+</h3>
+<ul>
+    <li>
+        Bezahlung nach Gebrauch
+    </li>
+    <li>
+        geringe Gesamtkosten (geringe Anschaffungskosten)
+    </li>
+    <li>
+        geringer Wartungsaufwand
+    </li>
+    <li>
+        weltweiter Zugang
+    </li>
+</ul>
+
+<h3>
+    Nachteile von Cloud-lösungen gegenüber on Premise-lösungen
+</h3>
+<ul>
+    <li>
+        Kosten (Bezahlung nach Gebrauch)
+    </li>
+    <li>
+        provider login wechseln
+    </li>
+    <li>
+        Daten sind nicht bei mir/weniger Kontrolle
+    </li>
+    <li>
+        Sehr hohe Komplexität (FTP war im Vergleich sehr einfach)
+    </li>
+</ul>
+
+<h3>
+    verschiedene Cloud-Anbieter
+</h3>
+<ul>
+    <li>
+        Alibaba Cloud
+    </li>
+    <li>
+        Amazon Web Services (AWS)
+    </li>
+    <li>
+        ICloud
+    </li>
+    <li>
+        Bitwarden
     </li>
 </ul>
 </body>
